examples/Errors/102.zph
a # PT:abc;

b ? push:;